More more pretty

--- a/index.html
+++ b/index.html
@@ -5,11 +5,27 @@ title: Possel
 
 <div class="wrapper">
   <header class="topic">
-    <h1 class="channame">#compsoc</h1>
+    <span class="channame">#compsoc</span>
     <span class="chantopic">
       COMPSOC &lt;3 FRESHERS | EGM & STMU 21st Oct in the IF! | See also #compsoc-minecraft
-      (now with more KSP), #compsoc-ss13, #tardis and #sigint for alumni
+      <!--(now with more KSP), #compsoc-ss13, #tardis and #sigint for alumni-->
+    </span>
+    <span class="pull-right chanmeta">
+      <i class="fa fa-user"> 34</i>
+      <span class="spacer"></span>
+      <button type="button" class="btn btn-sm btn-default">
+        <i class="fa fa-power-off"></i> &nbsp; leave
+      </button>
     </span>
   </header>
 
+  <footer class="input-field">
+    <form class="form-inline">
+      <div class="form-group">
+        <input type="text" class="form-control">
+        <input type="submit" class="form-control">
+      </div>
+    </form>
+  </footer>
+  
 </div>
