--- a/index.html
+++ b/index.html
@@ -4,21 +4,183 @@ title: Possel
 ---
 
 <div class="wrapper">
+
+  
+  <div class="imsogoodatnamingdivs">
+    <div class="dooblydoo">
+      <h2><i class="fa fa-users"></i> <span class="spacer"></span>
+        34 <span class="spacer"></span> In this channel</h2>
+    </div>
+
+    <div class="nickwrap">
+      <ul class="nicklist">
+        <li class="oper active"><a href="">angusp</a></li>
+        <li class="oper"><a href="">carrot</a></li>
+        <li class="oper active"><a href="">COMPSOC</a></li>
+        <li class="oper active"><a href="">KitB</a></li>
+        <li class="oper"><a href="">neanias</a></li>
+        <li class="voice"><a href="">rhiaro</a></li>
+        <li class="voice"><a href="">botbot</a></li>
+        <li><a href="">Abish</a></li>
+        <li><a href="">amazoph</a></li>
+        <li class="active"><a href="">Bletherer</a></li>
+        <li class="active"><a href="">bmoriarty</a></li>
+        <li class="active"><a href="">edran</a></li>
+        <li><a href="">Jammy</a></li>
+        <li class="active"><a href="">oliland</a></li>
+      </ul>
+    </div>
+  </div><!-- /.imsogoodatnamingdivs -->
+  
   <header class="topic">
     <span class="channame">#compsoc</span>
     <span class="chantopic">
       COMPSOC &lt;3 FRESHERS | EGM & STMU 21st Oct in the IF! | See also #compsoc-minecraft
-      <!--(now with more KSP), #compsoc-ss13, #tardis and #sigint for alumni-->
+      (now with more KSP), #compsoc-ss13, #tardis and #sigint for alumni
     </span>
     <span class="pull-right chanmeta">
-      <i class="fa fa-user"> 34</i>
-      <span class="spacer"></span>
       <button type="button" class="btn btn-sm btn-default">
         <i class="fa fa-power-off"></i> &nbsp; leave
       </button>
     </span>
   </header>
+  
 
+  <div class="chatblock">
+    <div class="media">
+      <div class="media-left">
+        <img class="media-object img-circle userimg"
+             src="http://www.gravatar.com/avatar/dc0c227582d78aa79b328f775d328cb5?s=40&f=y&d=retro">
+      </div>
+      <div class="media-body">
+        <span class="usernick">angusp</span>
+        <span class="spacer"></span>
+        <span class="usermsgtime">12:05</span>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam molestie nunc in erat bibendum, ac malesuada diam facilisis. Nullam consequat eros eu sapien varius, ornare pellentesque elit consequat. In hac habitasse platea dictumst. Curabitur hendrerit mauris ut tellus egestas, sed accumsan quam tempus. 
+        </p>
+      </div>
+    </div>
+
+
+    <div class="media">
+      <div class="media-left">
+        <img class="media-object img-circle userimg"
+             src="http://www.gravatar.com/avatar/fda983bf3846fce620d3821a60c3c876?s=40&f=y&d=retro">
+      </div>
+      <div class="media-body">
+        <span class="usernick">KitB</span>
+        <span class="spacer"></span>
+        <span class="usermsgtime">12:06</span>
+        <p>
+          Praesent cursus fermentum dignissim. <span class="mention">@angusp</span> Mauris eleifend sem ac nibh fermentum, a euismod sapien fermentum.
+        </p>
+        <p>
+          <span class="usermsgtime">12:15</span>
+          Aenean sed ultrices quam. Phasellus in urna tellus. Donec hendrerit diam sed lacus eleifend, id aliquam ex commodo. In luctus egestas orci, ac commodo risus eleifend nec. Sed egestas maximus venenatis. Pellentesque vel dolor interdum, scelerisque tellus dignissim, congue nunc.
+        </p>
+      </div>
+    </div>
+
+    <div class="media">
+      <div class="media-left">
+        <img class="media-object img-circle userimg"
+             src="http://www.gravatar.com/avatar/87d304343f222bbc5c59ac86ec5088ec?s=40&f=y&d=retro">
+      </div>
+      <div class="media-body">
+        <span class="usernick">Norgg</span>
+        <span class="spacer"></span>
+        <span class="usermsgtime">12:29</span>
+        <p>
+          Nunc non imperdiet ipsum. Maecenas in convallis augue, sed efficitur massa. Aliquam consectetur, lectus vel feugiat euismod, velit nisi elementum tellus, at faucibus elit nulla vel justo. </p><p>Aliquam convallis vulputate nibh, a sagittis ante pretium non. Quisque cursus consectetur fermentum. Nunc euismod sollicitudin dui id cursus. In hac habitasse platea dictumst. Suspendisse facilisis consectetur ipsum. Integer tempus nisl vestibulum nisl porta sodales.
+        </p>
+      </div>
+    </div>
+
+
+    <div class="media">
+      <div class="media-left">
+        <img class="media-object img-circle userimg"
+             src="http://www.gravatar.com/avatar/dc0c227582d78aa79b328f775d328cb5?s=40&f=y&d=retro">
+      </div>
+      <div class="media-body">
+        <span class="usernick">angusp</span>
+        <span class="spacer"></span>
+        <span class="usermsgtime">12:29</span>
+        <div class="richmedia panel panel-default">
+          <div class="row">
+            <div class="col-sm-8">
+              <div class="embed-responsive embed-responsive-16by9 richmedia-embed">
+                <iframe src="https://www.youtube.com/embed/XZLN1PN3L4I" frameborder="0" allowfullscreen></iframe>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="padder">
+              <span class="pull-right"><i class="fa fa-close"></i></span>
+                <img class="embed-icon" src="http://s.ytimg.com/yts/img/favicon_48-vfl1s0rGh.png">
+                <h3>YouTube</h3>
+                <p><a href="https://www.youtube.com/channel/UC3LqW4ijMoENQ2Wv17ZrFJA">PBS Idea Channel</a></p>
+                <p>Is Rick from Rick & Morty The Ideal Scientist? | Idea Channel | PBS Digital Studios</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="media">
+      <div class="media-left">
+        <img class="media-object img-circle userimg"
+             src="http://www.gravatar.com/avatar/40a27ddccec40fde4c0d025c3d6c6622?s=40&f=y&d=retro">
+      </div>
+      <div class="media-body">
+        <span class="usernick">COMPSOC</span>
+        <span class="spacer"></span>
+        <span class="usermsgtime">12:31</span>
+        <p>
+          <a href="https://twitter.com/CompSoc/status/652833732760571904">https://twitter.com/CompSoc/status/652833732760571904</a>
+        </p>
+        <blockquote class="twitter-tweet" lang="en"><p lang="en" dir="ltr">Thanks <a href="https://twitter.com/Dominos_UK">@Dominos_UK</a> for the <a href="https://twitter.com/hashtag/LocalHackDay?src=hash">#LocalHackDay</a> pizza <a href="https://twitter.com/hashtag/omnomnom?src=hash">#omnomnom</a> (sorry James) <a href="https://twitter.com/hashtag/MLHacks?src=hash">#MLHacks</a> <a href="http://t.co/jNQreJHyWt">pic.twitter.com/jNQreJHyWt</a></p>&mdash; Computing Society (@CompSoc) <a href="https://twitter.com/CompSoc/status/652833732760571904">October 10, 2015</a></blockquote>
+      </div>
+    </div>
+
+    
+    <div class="media">
+      <div class="media-left">
+        <img class="media-object img-circle userimg"
+             src="http://www.gravatar.com/avatar/fda983bf3846fce620d3821a60c3c876?s=40&f=y&d=retro">
+      </div>
+      <div class="media-body">
+        <span class="usernick">KitB</span>
+        <span class="spacer"></span>
+        <span class="usermsgtime">13:37</span>
+        <div class="richmedia panel panel-default">
+          <div class="row">
+            <div class="col-sm-8">
+              <div class="embed-responsive embed-responsive-16by9 richmedia-embed">
+                <iframe src="https://player.vimeo.com/video/82038912" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="padder">
+              <span class="pull-right"><i class="fa fa-close"></i></span>
+                <img class="embed-icon" src="https://i.vimeocdn.com/favicon/main-touch_180">
+                <h3>Vimeo</h3>
+                <p><a href="https://vimeo.com/cysfilm">Cy Kuckenbaker</a></p>
+                <p>Midday Traffic Time Collapsed and Reorganized by Color: San Diego Study #3</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+  </div><!-- /.chatblock -->
+
+
+
+  
   <footer class="input-field">
     <form class="form-inline">
       <div class="form-group">
