add libraries and id's to mount onto.

--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@ title: Possel
 
 <div class="wrapper">
 
-  
+
   <div class="imsogoodatnamingdivs">
     <div class="dooblydoo">
       <h2><i class="fa fa-users"></i> <span class="spacer"></span>
         34 <span class="spacer"></span> In this channel</h2>
     </div>
 
-    <div class="nickwrap">
+
+    <div id="user_block" class="nickwrap">
       <ul class="nicklist">
         <li class="oper active"><a href="">angusp</a></li>
         <li class="oper"><a href="">carrot</a></li>
@@ -44,9 +45,8 @@ title: Possel
       </button>
     </span>
   </header>
-  
 
-  <div class="chatblock">
+  <div class="chatblock" id="chat_block">
     <div class="media">
       <div class="media-left">
         <img class="media-object img-circle userimg"
@@ -256,6 +256,8 @@ title: Possel
 
 
   
+  <div id="input_block">
+      <!-- 
   <footer class="input-field">
     <form class="form-inline">
       <div class="form-group">
@@ -264,5 +266,7 @@ title: Possel
       </div>
     </form>
   </footer>
+  -->
+  </div>
   
 </div>
